Added second pass to example handlebars app.
Added more strutural changes to controllers, routes and models. Will add model definitions in next commit.

--- a/Express-Handlebars/package.json
+++ b/Express-Handlebars/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Express-Handlebars",
+  "name": "commissary",
   "version": "1.0.0",
   "description": "A sample express application using handlebars and sequelize.",
   "main": "server.js",
